lower required werkzeug version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pyhp-core
 version = attr: pyhp.__version__
-description = package for embedding and using python code like php
+description = Package for embedding and using python code like php
 license = GPLv3
 license_file = LICENSE
 long_description = file: README.md
@@ -12,17 +12,18 @@ maintainer = Eric Wolf
 maintainer_email = robo-eric@gmx.de
 url = https://github.com/Deric-W/PyHP
 classifiers =
-    Programming Language :: Python :: 3
-	Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    Intended Audience :: Developers
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
-    Topic :: Internet :: WWW/HTTP
-    Topic :: Internet :: WWW/HTTP :: Dynamic Content
+    Intended Audience :: Developers
     Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
+    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
+    Topic :: Software Development :: Interpreters
+    Topic :: Text Processing :: Markup :: HTML
+    Typing :: Typed
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
@@ -38,7 +39,7 @@ python_requires = >=3.7
 
 [options.extras_require]
 CONFIG = toml >= 0.10.0
-PHP = werkzeug >= 2.0.0
+PHP = werkzeug >= 0.14.0
 
 [options.package_data]
 pyhp = py.typed
@@ -66,9 +67,6 @@ no_implicit_reexport = True
 check_untyped_defs = True
 disallow_untyped_defs = True
 no_implicit_optional = True
-
-[mypy-pyhp.libpyhp]
-ignore_errors = True
 
 [mypy-pyhp.wsgi.interfaces.php]
 # the type: ignore is needed because CI fails somehow (but not local tests?)
