--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ console_scripts =
     pyhp = pyhp.main:cli_main [CONFIG,PHP]
     pyhp-cli = pyhp.main:cli_main [CONFIG,PHP]
     pyhp-cgi = pyhp.main:cgi_main [CONFIG,PHP]
+    pyhp-backend = pyhp.backends.main:main [CONFIG]
 
 [coverage:run]
 source = pyhp
